attempt54: fix: audio autoplay issue on mobile

--- a/styles/Play.module.css
+++ b/styles/Play.module.css
@@ -66,7 +66,6 @@
 
 .playScreenContainer {
   min-height: inherit;
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column !important;
@@ -127,6 +126,16 @@
   100% {
     width: 100%;
   }
+}
+
+.listenBtn {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
 }
 
 .playBtn {
